--- a/Sign up/style.css
+++ b/Sign up/style.css
@@ -66,7 +66,7 @@ body {
 }
 
 .right-container {
-  background: #dedbda;
+  background: #ffc975;
   display: grid;
   grid-template-areas: "." ".";
   width: 600px;
@@ -178,6 +178,6 @@ body {
 }
 
 .radio-container input[type=radio]:checked + label {
-  background: #F7B1AB;
+  background: #6d758d6e;
   border: 1px solid rgba(0, 0, 0, 0.1);
 }
