--- a/Sign up/style.css
+++ b/Sign up/style.css
@@ -25,7 +25,7 @@ body {
 }
 
 .left-container {
-  background: #080708;
+  background: black;
   overflow: hidden;
   padding: 40px 0 0 0;
   position: relative;
